# Car_Dashboard

./: CMakeLists.txt  README.md
Configurations/: dashboardclient.json
DashboardClient/: CMakeLists.txt  main.qml
DashboardClient/Backend/include/: DashboardClient.hpp
FuelService/: CMakeLists.txt
FuelService/include/: FuelService.hpp
FuelService/src/: FuelService.cpp  fuelservice_main.cpp
SpeedService/: CMakeLists.txt
SpeedService/include/: SpeedService.hpp
SpeedService/src/: SpeedService.cpp  speedservice_main.cpp
TempService/: CMakeLists.txt
TempService/include/: TemperatureService.hpp
TempService/src/: TemperatureService.cpp  temperatureservice_main.cpp
